--- a/serve/index.html
+++ b/serve/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Raspberry PI</title>
+    <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
  <h1>Serving from Raspberry PI</h1>
