--- a/serve/index.html
+++ b/serve/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
- <h1>Serving from Raspberry PI</h1>
+ <h1>Serving from Raspberry Pi</h1>
 </body>
 </html>
